--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'org.ratpack-framework.netty:ratpack-gradle:0.7.0-SNAPSHOT'
+    classpath 'org.ratpack-framework:ratpack-gradle:0.7.0-SNAPSHOT'
   }
 }
 
