--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     springloaded "org.springsource.springloaded:springloaded-core:1.1.1"
 }
 
+run {
+    systemProperty "ratpack.reloadable", "true"
+}
+
 task wrapper(type: Wrapper) {
   gradleVersion = '1.4'
 }
