--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
   repositories {
-    maven { url "http://oss.jfrog.org/artifactory/repo" }
+    maven { url "http://oss.jfrog.org/repo" }
     mavenCentral()
   }
   dependencies {
@@ -10,7 +10,7 @@ buildscript {
 
 repositories {
   mavenLocal()
-  maven { url "http://oss.jfrog.org/artifactory/repo" }
+  maven { url "http://oss.jfrog.org/repo" }
   mavenCentral()
   maven { url "http://repo.springsource.org/repo" } // for springloaded
 }
