--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,15 @@ idea {
     }
 }
 
+configurations.all {
+    exclude module: "groovy"
+}
+
 dependencies {
     // SpringLoaded enables runtime hot reloading.
     // It is not part of the app runtime and is not shipped in the distribution.
     springloaded "org.springsource.springloaded:springloaded-core:1.1.1"
-}
-
-task wrapper(type: Wrapper) {
-  gradleVersion = '1.6'
+    testCompile "org.spockframework:spock-core:0.7-groovy-2.0", {
+        exclude module: "groovy-all"
+    }
 }
