--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,16 @@
 buildscript {
   repositories {
-    maven { url "http://oss.jfrog.org/repo" }
-    mavenCentral()
+    maven { url "http://oss.jfrog.org/artifactory/repo" }
+    jcenter()
   }
   dependencies {
-    classpath 'io.ratpack:ratpack-gradle:0.9.0-SNAPSHOT'
+    classpath 'io.ratpack:ratpack-gradle:0.9.7'
   }
-}
-
-repositories {
-  maven { url "http://oss.jfrog.org/repo" }
-  mavenCentral()
-  maven { url "http://repo.springsource.org/repo" } // for springloaded
 }
 
 // The “ratpack” plugin applies the “application” plugin, making it easy to create a standalone application.
 // See: http://gradle.org/docs/current/userguide/application_plugin.html
-apply plugin: "ratpack-groovy"
+apply plugin: "io.ratpack.ratpack-groovy"
 
 // The “ratpack” plugin is IDEA aware.
 // It will create a run configuration in IDEA to launch your app in your IDE, with hot reloading.
@@ -28,6 +22,14 @@ idea {
     }
 }
 
+apply plugin: "eclipse"
+
+repositories {
+  maven { url "http://oss.jfrog.org/artifactory/repo" }
+  jcenter()
+  maven { url "http://repo.springsource.org/repo" } // for springloaded
+}
+
 configurations.all {
     exclude module: "groovy"
 }
@@ -35,7 +37,12 @@ configurations.all {
 dependencies {
     // SpringLoaded enables runtime hot reloading.
     // It is not part of the app runtime and is not shipped in the distribution.
-    springloaded "org.springsource.springloaded:springloaded-core:1.1.4"
+    springloaded "org.springframework:springloaded:1.2.0.RELEASE"
+
+    // Default SLF4J binding. Note that this is a blocking implementation.
+    // See here for a non blocking appender http://logging.apache.org/log4j/2.x/manual/async.html
+    runtime 'org.slf4j:slf4j-simple:1.7.7'
+
     testCompile "org.spockframework:spock-core:0.7-groovy-2.0", {
         exclude module: "groovy-all"
     }
