--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,13 @@ idea {
     project {
         jdkName "1.7"
         languageLevel "1.7"
+        ipr {
+            withXml { provider ->
+                def node = provider.asNode()
+                //configure git support for the project in idea
+                node.component.find { it.'@name' == 'VcsDirectoryMappings' }?.mapping[0].'@vcs' = 'Git'
+            }
+        }
     }
 }
 
