--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,10 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'io.ratpack:ratpack-gradle:0.9.8'
+    classpath 'io.ratpack:ratpack-gradle:+'
+  }
+  configurations.all {
+    resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
   }
 }
 
