--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,9 @@
-buildscript {
-  repositories {
-    maven { url "http://oss.jfrog.org/artifactory/repo" }
-    jcenter()
-  }
-  dependencies {
-    classpath 'io.ratpack:ratpack-gradle:0.9.10'
-  }
+plugins {
+	id "io.ratpack.ratpack-groovy" version "0.9.10"
+	id "org.gradle.idea"
+    id "org.gradle.eclipse"
 }
 
-// The “ratpack” plugin applies the “application” plugin, making it easy to create a standalone application.
-// See: http://gradle.org/docs/current/userguide/application_plugin.html
-apply plugin: "io.ratpack.ratpack-groovy"
-
-// The “ratpack” plugin is IDEA aware.
-// It will create a run configuration in IDEA to launch your app in your IDE, with hot reloading.
-apply plugin: "idea"
 idea {
     project {
         jdkName "1.8"
@@ -29,12 +18,9 @@ idea {
     }
 }
 
-apply plugin: "eclipse"
-
 repositories {
-  maven { url "http://oss.jfrog.org/artifactory/repo" }
   jcenter()
-  maven { url "http://repo.springsource.org/repo" } // for springloaded
+  maven { url "http://oss.jfrog.org/artifactory/repo" }
 }
 
 configurations.all {
