--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ idea {
 apply plugin: "eclipse"
 
 repositories {
+  maven { url 'http://clinker.netty.io/nexus/content/repositories/snapshots' }
   maven { url "http://oss.jfrog.org/artifactory/repo" }
   jcenter()
   maven { url "http://repo.springsource.org/repo" } // for springloaded
