--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ configurations.all {
 dependencies {
     // SpringLoaded enables runtime hot reloading.
     // It is not part of the app runtime and is not shipped in the distribution.
-    springloaded "org.springframework:springloaded:1.2.0.RELEASE"
+    // springloaded "org.springframework:springloaded:1.2.1.RELEASE"
 
     // Default SLF4J binding. Note that this is a blocking implementation.
     // See here for a non blocking appender http://logging.apache.org/log4j/2.x/manual/async.html
