--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'io.ratpack:ratpack-gradle:0.9.18'
+        classpath 'io.ratpack:ratpack-gradle:1.0.0-rc-1'
     }
 }
 
@@ -42,10 +42,6 @@ configurations.all {
 }
 
 dependencies {
-    // SpringLoaded enables runtime hot reloading.
-    // It is not part of the app runtime and is not shipped in the distribution.
-    // springloaded "org.springframework:springloaded:1.2.1.RELEASE"
-
     // Default SLF4J binding. Note that this is a blocking implementation.
     // See here for a non blocking appender http://logging.apache.org/log4j/2.x/manual/async.html
     runtime 'org.slf4j:slf4j-simple:1.7.7'
