--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'io.ratpack:ratpack-gradle:1.0.0-rc-1'
+        classpath 'io.ratpack:ratpack-gradle:1.0.0'
     }
 }
 
